# projectbrain-mcp

./: Dockerfile  OPEN_SOURCE_POLICY.md  README.md  api_adapter.py  envelope.py  errors.py  pyproject.toml  runner.py  runtime.py  server.py
actions/: __init__.py  collab_actions.py  context_actions.py  file_actions.py  knowledge_actions.py  milestone_actions.py  tasks_actions.py  workflow_actions.py
projectbrain_mcp/: __init__.py  runtime.py  server.py
tests/: test_api_adapter_auth.py  test_envelope.py  test_server_context_session.py  test_server_context_shortlist.py  test_server_get_my_tasks.py  test_server_resources_prompts.py  test_server_tasks_milestones.py  test_server_tool_descriptors.py
